# godot-livekit

./: .gitignore  ANDROID_BUILD.md  ANDROID_FIX_SUMMARY.md  BUILD_FIRST.md  LIVEKIT_NAKAMA_SYNC.md  LIVEKIT_SERVER_GUIDE.md  MULTI_CLIENT_TOKENS.md  PARTICIPANT_FIX.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RUST_DEVELOPMENT.md  WebRTC Signaling Example.csproj  generate_token.js  generate_token.py  generate_token_quick.py  godot-livekit.csproj  livekit.yaml  project.godot  webrtc_test.gd
.github/workflows/: build.yml
addons/godot-livekit/: godot-livekit.gdextension  plugin.cfg
client/: LiveKitManager.cs  LiveKitManager.tscn
client/protos/logger/: options.proto
demo/: ClientUI.cs  ClientUI.tscn  GDExtensionTest.tscn  LiveKitUI.tscn  gdextension_test.gd  mic_visualizer.gd  mic_visualizer.tscn
livekit-server/: config.yaml  docker-compose.yml
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/src/: audio_handler.rs  lib.rs  livekit_client.rs  participant_audio.rs
server_node/: package-lock.json  server.js
webrtc/: webrtc.gdextension.uid
